<resources>
    <string name="app_name">成双</string>
    <string name="app_tip">对TA说出那份爱</string>
    <string name="crash">很抱歉,程序出现异常,即将退出</string>
    <string name="tip_again_to_exit">再按一次退出程序</string>
    <string name="loading">加载中...</string>
    <string name="please_wait">请稍候</string>
    <string name="net_not_ok">当前网络不可用</string>
    <string name="bad_request">请求失败，请稍后重试</string>
    <string name="can_not_connect_to_server">连接不到服务器，请稍后重试</string>
    <string name="disappointing_network_environment">当前网络环境较差，请稍后重试</string>
    <string name="ok">确定</string>
    <string name="back">返回</string>
    <string name="digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="login">登录</string>
    <string name="name">用户名</string>
    <string name="password">密码</string>
    <string name="affirm_password">确认密码</string>
    <string name="name_can_not_empty">请输入用户名</string>
    <string name="password_can_not_empty">请输入密码</string>
    <string name="affirm_password_can_not_empty">请输入确认密码</string>
    <string name="affirm_password_not_equals_password">两次输入的密码不一致</string>
    <string name="logining">登录中...</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register">注册</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="secret">保密</string>
    <string name="register_success">注册成功</string>
    <string name="honey_word">蜜语</string>
    <string name="find">发现</string>
    <string name="chat">聊聊</string>
    <string name="my">我的</string>
    <string name="empty_honey_word">您还没有发表过蜜语，快来发一条吧\n大声对TA说出爱</string>
    <string name="empty_chat">您还没有和其他人聊过，快来找个人来聊聊吧</string>
    <string name="empty_find">还没有用户公开蜜语，快来发第一条吧\n让全世界知道你对TA的爱</string>
    <string name="publish">发表</string>
    <string name="setting">设置</string>
    <string name="exit">退出登录</string>
    <string name="exit_success">退出成功</string>
    <string name="collection">收藏</string>
    <string name="praise">赞</string>
    <string name="comment">评论</string>
    <string name="message">消息</string>
    <string name="user_info">个人信息</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="more">更多</string>
    <string name="update_success">修改成功</string>
    <string name="nickname_can_not_empty">请输入昵称</string>
    <string name="birthday_can_not_empty">请选择生日</string>
    <string name="update_password">修改密码</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="old_password_can_not_empty">请输入旧密码</string>
    <string name="new_password_can_not_empty">请输新入密码</string>
    <string name="app_update">版本更新</string>
    <string name="is_last_app_version">已是最新版本</string>
    <string name="clear_cache">清理缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="about">关于</string>
    <string name="app_right">©skye\nCopyright 2017\nAll Right Reserved</string>
    <string name="clear_cache_success">清理成功</string>
    <string name="submit_success">提交成功</string>
    <string name="feedback_can_not_empty">请输入意见内容</string>
    <string name="unopened">尚未公开</string>
    <string name="publish_pillow_talk">发表悄悄话</string>
    <string name="content_can_not_empty">请输入内容</string>
    <string name="publish_success">发表成功</string>
    <string name="local_photo_album">本地相册</string>
    <string name="no_sd_card_take_photo">未找到存储卡，无法拍照</string>
    <string name="no_sd_card_select_photo">未找到存储卡，无法选择相册图片</string>
    <string name="get_photo_fail">获取图片失败</string>
    <string name="content_image_can_not_empty">请输入内容或插入图片</string>
    <string name="pillow_talk_detail">悄悄话详情</string>
    <string name="cancel">取消</string>
    <string name="open">公开</string>
    <string name="open_success">公开成功</string>
    <string name="wait_another_open">等待对方公开</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="report">举报</string>
    <string name="report_success">举报成功</string>
    <string name="report_can_not_empty">请输入举报内容</string>
    <string name="reply">回复</string>
    <string name="reply_can_not_empty">请输入回复内容</string>
    <string name="reply_success">回复成功</string>
    <string name="comment_can_not_empty">请输入评论内容</string>
    <string name="comment_success">评论成功</string>
    <string name="first_page">首页</string>
    <string name="previous_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="last_page">末页</string>
    <string name="comment_list">评论列表</string>
    <string name="empty_comment">还没有来评论，快来抢沙发</string>
    <string name="look_comments">看评论</string>
    <string name="collect">收藏</string>
    <string name="collect_success">收藏成功</string>
    <string name="cancel_collect">取消收藏</string>
    <string name="cancel_collect_success">取消收藏成功</string>
    <string name="collect_list">收藏列表</string>
    <string name="empty_collection">您还没有收藏过悄悄话</string>
    <string name="praise_success">赞成功</string>
    <string name="cancel_praise">取消赞</string>
    <string name="cancel_praise_success">取消赞成功</string>
    <string name="praise_list">赞列表</string>
    <string name="empty_praise">您还没有赞过悄悄话</string>
    <string name="empty_commented">您还没有评论过悄悄话</string>
    <string name="empty_private_message">您还没有和对方聊过天</string>
    <string name="send">发送</string>
    <string name="chat_content_can_not_empty">请输入聊天内容</string>
    <string name="single">单身</string>
    <string name="lover">恋人</string>
    <string name="break_up">分手</string>
    <string name="break_up_success">分手成功</string>
    <string name="courtshipdisplay">示爱</string>
    <string name="courtshipdisplay_success">示爱成功，等待对方同意</string>
    <string name="congratulation">恭喜</string>
    <string name="pillow_talk">悄悄话</string>
    <string name="empty_published_pillow_talk">TA还没有公开发表过悄悄话</string>
    <string name="message_list">消息列表</string>
    <string name="empty_message_list">您暂时还没有收到消息</string>
    <string name="description">描述</string>
</resources>
