<?xml version="1.0" encoding="utf-8"?><!--登录界面-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    tools:context=".activity.user.LoginActivity">

    <com.skye.lover.view.Topbar
        android:id="@+id/topbar"
        style="@style/topbar" />

    <!-- 用户名 -->

    <EditText
        android:id="@+id/ed_name"
        style="@style/single_white_edittext"
        android:layout_marginTop="@dimen/vertical"
        android:digits="@string/digits"
        android:hint="@string/name"
        android:inputType="text"
        android:maxLength="@integer/max_text_length" />

    <!-- 密码 -->

    <EditText
        android:id="@+id/ed_password"
        style="@style/single_white_edittext"
        android:layout_marginTop="@dimen/vertical"
        android:digits="@string/digits"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="@integer/max_password_length" />

    <!-- 确定 -->

    <Button
        android:id="@+id/btn_ok"
        style="@style/full_column_btn"
        android:layout_marginTop="@dimen/vertical"
        android:text="@string/ok" />
</LinearLayout>
