<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    tools:context=".activity.my.setting.SettingActivity">

    <com.skye.lover.view.Topbar
        android:id="@+id/topbar"
        style="@style/topbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:layout_marginTop="@dimen/vertical"
                android:background="@color/split_line" />

            <!--版本更新-->

            <LinearLayout
                android:id="@+id/ll_app_update"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:background="@drawable/selector_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/horizontal"
                android:paddingRight="@dimen/horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/app_update"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/main_text_size" />

                <TextView
                    android:id="@+id/tv_app_current_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/main_text_size" />

                <View
                    android:layout_width="@dimen/small_mark"
                    android:layout_height="@dimen/small_mark"
                    android:layout_marginLeft="@dimen/horizontal"
                    android:background="@drawable/shape_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:background="@drawable/layer_split_line" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:layout_marginTop="@dimen/vertical"
                android:background="@color/split_line" />

            <!--清理缓存-->

            <LinearLayout
                android:id="@+id/ll_clear_cache"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:background="@drawable/selector_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/horizontal"
                android:paddingRight="@dimen/horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/clear_cache"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/main_text_size" />

                <TextView
                    android:id="@+id/tv_clear_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_gray"
                    android:textSize="@dimen/main_text_size" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:background="@color/split_line" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:layout_marginTop="@dimen/vertical"
                android:background="@color/split_line" />

            <!--意见反馈-->

            <LinearLayout
                android:id="@+id/ll_feedback"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:background="@drawable/selector_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/horizontal"
                android:paddingRight="@dimen/horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/feedback"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/main_text_size" />

                <View
                    android:layout_width="@dimen/small_mark"
                    android:layout_height="@dimen/small_mark"
                    android:layout_marginLeft="@dimen/horizontal"
                    android:background="@drawable/shape_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:background="@drawable/layer_split_line" />

            <!--关于-->

            <LinearLayout
                android:id="@+id/ll_about"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:background="@drawable/selector_white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/horizontal"
                android:paddingRight="@dimen/horizontal">

                <TextView
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/about"
                    android:textColor="@color/text_black"
                    android:textSize="@dimen/main_text_size" />

                <View
                    android:layout_width="@dimen/small_mark"
                    android:layout_height="@dimen/small_mark"
                    android:layout_marginLeft="@dimen/horizontal"
                    android:background="@drawable/shape_next" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:background="@color/split_line" />


            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:layout_marginTop="@dimen/vertical"
                android:background="@color/split_line" />

            <!-- 退出登录 -->

            <TextView
                android:id="@+id/tv_exit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/list_item_height"
                android:background="@drawable/selector_white"
                android:gravity="center"
                android:text="@string/exit"
                android:textColor="@color/text_black" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/split_line"
                android:background="@color/split_line" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
